progress on opengl integration