@@ -18,13 +18,13 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
-            <version>2.2.0</version>
+            <version>2.3.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
-            <version>2.2.0</version>
+            <version>2.3.0</version>
         </dependency>
 
         <dependency>
@@ -58,6 +58,12 @@
             <artifactId>openglfx-lwjgl</artifactId>
             <version>4.2.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.lwjgl</groupId>
+            <artifactId>lwjgl-opengl</artifactId>
+            <version>3.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -71,6 +77,22 @@
                     <target>23</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.4</version>
+                <configuration>
+                    <argLine>--add-exports=javafx.graphics/com.sun.prism=ALL-UNNAMED</argLine>
+                    <argLine>--add-exports=javafx.graphics/com.sun.javafx.scene.layout=ALL-UNNAMED</argLine>
+                    <argLine>--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</argLine>
+                    <argLine>--add-exports=javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</argLine>
+                    <argLine>--add-exports=javafx.graphics/com.sun.scenario=ALL-UNNAMED</argLine>
+                    <argLine>--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</argLine>
+                    <argLine>--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</argLine>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
@@ -90,6 +112,12 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.2.0</version>
             </plugin>
         </plugins>
     </build>
